--- a/PUH-Project-hash.cabal
+++ b/PUH-Project-hash.cabal
@@ -17,9 +17,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable PUH-Project-hash
-  -- main-is:             
+  main-is:            Main.hs         
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8
+  build-depends:       base >=4.7 && <4.8, parsec == 3.1.*, containers == 0.5.*, directory == 1.2.*, filepath == 1.3.*, split == 0.2.*
   -- hs-source-dirs:      
   default-language:    Haskell2010
